na: address added, working [Pranay Sarkar] [V]

--- a/eth-secret-messenger/index.html
+++ b/eth-secret-messenger/index.html
@@ -39,10 +39,39 @@
         web3.eth.defaultAccount = web3.eth.accounts[0];
 
         // Get the contract address
-        var RemixContract = web3.eth.contract(CONTRACT-ABI-HERE);
+        var RemixContract = web3.eth.contract([
+            {
+                "constant": false,
+                "inputs": [
+                    {
+                        "name": "x",
+                        "type": "string"
+                    }
+                ],
+                "name": "setMessage",
+                "outputs": [],
+                "payable": false,
+                "stateMutability": "nonpayable",
+                "type": "function"
+            },
+            {
+                "constant": true,
+                "inputs": [],
+                "name": "getMessage",
+                "outputs": [
+                    {
+                        "name": "",
+                        "type": "string"
+                    }
+                ],
+                "payable": false,
+                "stateMutability": "view",
+                "type": "function"
+            }
+        ]);
 
         // Get the contract abi
-        var myMessage = RemixContract.at('CONTRACT ADDRESS HERE');
+        var myMessage = RemixContract.at('0x0A61ba8375162c3162b8FeF81138891a5E9d10E3');
 
         console.log(myMessage);
 
